--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./src/styles/index.css">
 </head>
-<body>
-    <section class="bg-dark text-center p-4">
+<body class="container-fluid">
+    <section class="bg-dark text-center p-4 container-fluid">
         <div class="text-white">
         <img src="./public/images/profile.jpg" alt="My profile" height="100" width="100" style="border-radius: 100px;">
     </div>
-    <div class="text-white">
+    <div class="text-white container-fluid">
         <h3 class="mt-2">MUKALLA DURGA PRASAD</h3>
         <h4 class="p-2">Full Stack Web Developer</h4>
     </div><br>
-    <div class=" main-container bg-secondary text-white m-4 p-4">
+    <div class="main-container bg-secondary text-white m-4 p-4 container-fluid">
         <h3 class="p-3">Skills & Technologies</h3>
-       <div class="container">
+       <div class="container container-fluid">
         <span>HTML</span>
         <span>CSS</span>
         <span>BOOTSTRAP</span>
        </div>
-       <div class="container">
+       <div class="container container-fluid">
         <span>JAVASCRIPT</span>
         <span>REACT JS</span>
         <span>NODE JS</span>
        </div>
-       <div class="container">
+       <div class="container container-fluid">
         <span>EXPRESS JS</span>
         <span>MONGO DB</span>
         <span>MY SQL</span>
