--- a/public/pages/Mars-card.html
+++ b/public/pages/Mars-card.html
@@ -3,44 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mars-Rover</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script>
-        function Loading(){
-           fetch("https://api.nasa.gov/mars-photos/api/v1/rovers/curiosity/photos?sol=1000&api_key=dhmJ54q2NMXqywzeqoIiW1zq6mi4R24ft93Gv24b")
-           .then(function(active){
-            return active.json()
-           })
-           .then(function(data){
-            data.photos.map(function(item){
-                var div=document.createElement("div")
-                div.className=` card border border-2 m-2`
-                div.style.width="300px"
-                div.innerHTML=`
-                  <img class="card-img-top" src=${item.img_src} height="150">
-                 <div class="card-header">
-                    <h3>${item.id}</h3>
-                    </div>
-                    <div class="card-body">
-                        <dl>
-                            <dt>camera name</dt>
-                            <dd>${item.camera.full_name}</dd>
-                            <dt>Rover name</dt>
-                            <dd>${item.rover.name}</dd>
-                            <dt>Launch Date</dt>
-                            <dd>${item.rover.launch_date}</dd>
-                            </dl>
-                        </div>
-                        <div class="card-footer">
-                            <a href=${item.img_src} target="_blank"><button class="btn btn-dark w-100">Preview</button></a>
-                            </div>
-                `
-                document.querySelector("section").appendChild(div)
-            })
-           })
-        }
-    </script>
+    <script src="../../src/scripts/mars-card.js"></script>
 </head>
 <body class="container-fluid" onload="Loading()">
     <h2 class="text-center p-4">Nasa Mars Rover Images</h2>
