--- a/public/pages/Mobile-verf.html
+++ b/public/pages/Mobile-verf.html
@@ -3,44 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mobile Verification</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script>
-       var tip=""
-       var pattern=/ /
-       function countryChange(){
-        var poster=document.getElementById("poster");
-        var country=document.getElementById("selectCountry").value;
-        var mobile=document.getElementById("txtMobile");
-        switch(country){
-            case "India":
-            pattern=/\+91\d{10}/
-            poster.src="../../public/images/ind.jpg"
-            tip="+91 and 10 digit number"
-            break
-            case "U.S":
-            pattern=/\+\(1\)\(000\)\s000-0000/
-            poster.src="../../public/images/us.png"
-            tip="+(1)(000) 000-0000"
-            break
-            case "Russia":
-            pattern=/\+\(44\)\s\(0000\)\(0000\)/
-            poster.src="../../public/images/rus.jpg"
-            tip="+(44) (0000)(0000)"
-        }
-        mobile.placeholder=tip
-       }
-       function verifyMobile(){
-        var mobile=document.getElementById("txtMobile").value
-        var suggest=document.getElementById("suggest");
-        if(mobile.match(pattern)){
-            document.write("<h2>Verification Success</h2>")
-        }else{
-            suggest.innerHTML=`${tip} Please enter format`.fontcolor('red')
-        }
-       }
-    </script>
+    <script src="../../src/scripts/mobile-ver.js"></script>
 </head>
 <body class="container-fluid w-25">
   <h2>Verify Mobile Number</h2>
