--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        </div>
        <div class="container container-fluid">
         <span>JAVASCRIPT</span>
-        <span>REACT JS</span>
+        <span>REACT</span>
         <span>NODE JS</span>
        </div>
        <div class="container container-fluid">
@@ -40,7 +40,7 @@
     <main>
         <div class="card-row-1">
             <div class="card w-25">
-                <img src="./public/images/coding.jpg" height="150" width="100%">
+                <img src="./public/images/coding.jpg" height="200" width="100%">
                 <div class="card-header">
                   <h4>EMI - Calculator</h4>
                 </div>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="card w-25">
-                <img src="./public/images/coding.jpg" height="150" width="100%">
+                <img src="./public/images/coding.jpg" height="200" width="100%">
                 <div class="card-header">
                   <h4>FakeStore - Api</h4>
                 </div>
@@ -90,9 +90,7 @@
                     <h6><a href="./public/pages/Inox.html"><span>View Page</span> <span class="bi bi-arrow-right"></span></a></h6>
                 </div>
             </div>
-        </div>
-        <div class="card-row-2">
-            <div class="card w-25">
+             <div class="card w-25">
                 <img src="./public/images/coding.jpg" height="200" width="100%">
                 <div class="card-header">
                   <h4>Mars-rover Images</h4>
@@ -109,6 +107,8 @@
                     <h6><a href="./public/pages/Mars-card.html"><span>View Page</span> <span class="bi bi-arrow-right"></span></a></h6>
                 </div>
             </div>
+        </div>
+        <div class="card-row-2">
             <div class="card w-25">
                 <img src="./public/images/coding.jpg" height="200" width="100%">
                 <div class="card-header">
@@ -143,8 +143,6 @@
                     <h6><a href="./public/pages/Weather-app.html"><span>View Page</span> <span class="bi bi-arrow-right"></span></a></h6>
                 </div>
             </div>
-        </div>
-        <div class="card-row-3">
             <div class="card w-25">
                 <img src="./public/images/coding.jpg" height="200" width="100%">
                 <div class="card-header">
@@ -163,7 +161,12 @@
                 </div>
             </div>
         </div>
+        <div class="card-row-3">
+            
+        </div>
     </main>
+
+
     <footer>
         <div class="text-center p-4 m-2 bg-dark text-white">
             <h2>Thank You</h2>
